--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,3 +21,13 @@
 
 en:
   hello: "Hello world"
+  activerecord:
+    attributes:
+      nbaplayer:
+        avgpoints: "Average Points"
+    errors:
+     models:
+       nbaplayer:
+         attributes:
+           avgpoints: "Average Points"
+
