Changed README and tinkered with d3js

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,9 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+A Rails app that scrapes daily fantasy sports stats for analytic purposes.
 
-Things you may want to cover:
+* Scrapes data from Fanduel one-day NBA fantasy leagues.
 
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+* Working on more data categories and MLB integration
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
